src/main/resources/static/css/style.css
@font-face {
  font-family: 'icomoon';
  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
  font-weight: normal;
  font-style: normal;
}
body {
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
  font-weight: 300;
  color: #5e493a;
}

a {
  color: #FF9800;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
a:hover, a:focus, a:active {
  color: #bf4c03;
}

h1, h2, h3, h4, h5, h6 {

  color: #000;
}

p {
  margin-bottom: 30px;
}

.btn {
  font-size: 12px;
  letter-spacing: 2px;
  text-transform: uppercase;
  font-weight: 700;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  border-radius: 4px;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}

.btn:hover, .btn:active, .btn:focus {
  box-shadow: none !important;
  outline: none !important;
}

.btn-primary {
  background: #fb6e14;
  color: #fff;
  border: 2px solid #fb6e14;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
  background: #FF9800 !important;
  border-color: #FF9800 !important;
}

.btn-primary.btn-outline {
  background: transparent;
  color: #FF9800;
  border: 2px solid #FF9800;
}

.btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
  background: #fb6e14;
  color: #fff;
}

.btn-outline {
  background: none;
  border: 2px solid gray;
  letter-spacing: 2px;
  text-transform: uppercase;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}

.btn-outline:hover, .btn-outline:focus, .btn-outline:active {
  box-shadow: none;
}

.form-control {
  box-shadow: none;
  border: 2px solid rgba(0, 0, 0, 0.1);
  height: 54px;
  font-size: 18px;
  font-weight: 300;
}

.form-control:active, .form-control:focus {
  outline: none;
  box-shadow: none;
  border-color: #fb6e14;
}

/*
 * Flexslider
 */
#fh5co-home {
  min-height: 700px;
  background: #fff url(../images/loader.gif) no-repeat center center;
}
#fh5co-home .flexslider {
  border: none;
  position: relative;
  z-index: 1;
  margin-bottom: 0;
}
#fh5co-home .flexslider .fh5co-text {
  position: absolute;
  z-index: 3;
  width: 100%;
  top: 50%;
  margin-top: -112px;
  text-align: center;
}
#fh5co-home .flexslider .fh5co-text h1 {
  margin: 0;
  padding: 0;
  font-size: clamp(2.2rem, 6vw, 5rem);
  font-weight: 500;
  font-style: italic;
  color: #fff;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}

@media screen and (max-width: 992px) {
  #fh5co-home .flexslider .fh5co-text h1 {
    font-size: 40px;
  }
}

#fh5co-home .flexslider .fh5co-text h2 {
  margin: 0px;
  padding: 50px;
  font-family: "Merriweather", serif;
  font-weight: 300;
  font-size: 40px;
  letter-spacing: 2px;
  color: #FF9800;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}

@media screen and (max-width: 992px) {
  #fh5co-home .flexslider .fh5co-text h2 {
    font-size: 20px;
  }
}
#fh5co-home .flexslider .fh5co-text h2 span {
  font-family: "Playfair Display", serif;
  font-style: italic;
  text-transform: none;
}

#fh5co-home .flexslider .slides li {
  background-repeat: no-repeat;
  background-size: cover;
}
#fh5co-home .flexslider .fh5co-overlay {
  position: absolute;
  z-index: 3;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: .5;
  background: #000;
}

#fh5co-home .flexslider .flex-control-nav,
#fh5co-home .flexslider .flex-direction-nav {
  display: none;
}


.fh5co-heading .heading {
  font-size: 50px;
  font-style: italic;
  position: relative;
  padding-bottom: 30px;
  margin-bottom: 30px;
}
@media screen and (max-width: 768px) {
  .fh5co-heading .heading {
    font-size: 30px;
  }

  #fh5co-about .fh5co-text .heading {
      font-size: 30px;
    }
}

.fh5co-heading .heading:after {
  content: "";
  position: absolute;
  bottom: 0;
  width: 40px;
  height: 2px;
  left: 50%;
  background: #FF9800;
  margin-left: -20px;
}

.fh5co-heading .sub-heading {
  font-size: 20px;
  line-height: 1.5;
  margin-bottom: 30px;
}

@media screen and (max-width: 768px) {
  .fh5co-heading .sub-heading {
    font-size: 17px;
  }
}

#fh5co-about {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: block;
  flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -moz-flex-wrap: wrap;
  width: 100%;
  align-items: center;
  background-size: cover;
  background-position: left;
  background-repeat: no-repeat;
  background-attachment: fixed;
  padding-bottom: 20px;
}

#fh5co-about .fh5co-2col {
  padding: 5em 1em;
}


@media screen and (max-width: 1200px) {
  #fh5co-about .fh5co-2col {
    width: 100%;
  }
}

#fh5co-about .fh5co-text {
  padding: 1em 2em;
  text-align: left;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;

}

@media screen and (max-width: 1200px) {
  #fh5co-about .fh5co-text {
    padding: 1em;
  }
}

#fh5co-about .fh5co-text .heading {
  margin-bottom: 30px;
  color: #000;
  font-style: italic;
  position: relative;
  padding-bottom: 30px;
  text-align: center;
  padding-top: 30px !important;
}

#fh5co-about .fh5co-text .heading:after {
  content: "";
  position: absolute;
  bottom: 0;
  width: 40px;
  height: 2px;
  left: 50%;
  background: #FF9800;
  margin-left: -20px;
}

#fh5co-about .fh5co-text p {
  line-height: 2;

}

@media screen and (max-width: 1200px) {
  #fh5co-about .fh5co-bg {
    width: 100%;
    min-height: 500px;
  }
}

@media screen and (max-width: 768px) {
  #fh5co-about .fh5co-bg {
    width: 100%;
    min-height: 300px;
  }
}

#fh5co-sayings {
  padding: 7em 0;
  background-repeat: repeat;
  background-size: cover;
  background-position: center center;

}
/* ... */

